defect(css): fix css for alignment

--- a/hosting/src/design/layout-site/layout-site.component.scss
+++ b/hosting/src/design/layout-site/layout-site.component.scss
@@ -36,8 +36,6 @@
             display: grid;
             grid-template-rows: min-content min-content min-content;
             grid-gap: 0.5em;
-            align-items: center;
-            align-self: center;
             align-content: center;
 
             fa-icon {
